[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/axe_iron.png" type="Texture" id=1]
[ext_resource path="res://sprites/trunk_mid.png" type="Texture" id=2]
[ext_resource path="res://scripts/Trunk.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 48.3629

[node name="Trunk" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
z_index = -9
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )

[node name="leftAxe" type="Area2D" parent="." groups=[
"Axes",
]]
position = Vector2( -80, -0.25 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="leftAxe"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftAxe"]
shape = SubResource( 1 )

[node name="rightAxe" type="Area2D" parent="." groups=[
"Axes",
]]
position = Vector2( 80, -0.25 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="rightAxe"]
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightAxe"]
shape = SubResource( 1 )

[node name="timer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
